<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/clockRL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_15sdp"
                android:fontFamily="@font/gotham"
                android:text="@string/clock"
                android:textColor="@color/theme_color"
                android:textSize="@dimen/_15sdp" />

            <LinearLayout
                android:id="@+id/mStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_25sdp"
                    android:fontFamily="@font/gotham"
                    android:text="@string/style"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13sdp" />

                <TextView
                    android:id="@+id/mStyleTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_25sdp"
                    android:fontFamily="@font/gotham"
                    android:text="@string/digital"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10sdp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/mSecondSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="horizontal"
                android:paddingRight="@dimen/_20sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/_25sdp"
                    android:fontFamily="@font/gotham"
                    android:text="@string/d_sec"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13sdp" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/s_switch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_weight="1.5"
                    android:clickable="true"
                    android:focusable="true"
                    android:thumb="@drawable/switch_ios_selector"
                    app:track="@drawable/switch_ios_track" />
            </LinearLayout>

            <TextView
                android:id="@+id/mHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/gotham"
                android:text="@string/home_time"
                android:textColor="@color/white"
                android:textSize="@dimen/_13sdp" />

            <TextView
                android:id="@+id/mChange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:fontFamily="@font/gotham"
                android:text="@string/change"
                android:textColor="@color/white"
                android:textSize="@dimen/_13sdp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@color/bg_grey" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_15sdp"
                android:fontFamily="@font/gotham"
                android:text="@string/alarm"
                android:textColor="@color/theme_color"
                android:textSize="@dimen/_15sdp" />

            <LinearLayout
                android:id="@+id/mSilence"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_25sdp"
                    android:fontFamily="@font/gotham"
                    android:text="@string/silence"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13sdp" />

                <TextView
                    android:id="@+id/mMinutes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_25sdp"
                    android:fontFamily="@font/gotham"
                    android:text="@string/after"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10sdp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/mSnooz"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_25sdp"
                    android:fontFamily="@font/gotham"
                    android:text="@string/snooze_l"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13sdp" />

                <TextView
                    android:id="@+id/mMinutes1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_25sdp"
                    android:fontFamily="@font/gotham"
                    android:text="@string/after"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10sdp" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:paddingHorizontal="@dimen/_25sdp">

                <ImageView
                    android:id="@+id/mAlarm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_alarm"
                    app:tint="@color/theme_color" />

                <TextView
                    android:id="@+id/volumeTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@id/mSeekbar"
                    android:layout_marginLeft="@dimen/_12sdp"
                    android:fontFamily="@font/gotham"
                    android:text="@string/a_volume"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13sdp" />

                <SeekBar
                    android:id="@+id/mSeekbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/volumeTV"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_toRightOf="@id/mAlarm"
                    android:progress="50"
                    android:progressBackgroundTint="@color/white"
                    android:progressTint="@color/theme_color" />

            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</layout>